--- a/Creative Digital Solution.html
+++ b/Creative Digital Solution.html
@@ -2,188 +2,193 @@
 
 <html>
 <head>
-<title>Creative Digital Solution</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link href="creative.css" rel="stylesheet" type="text/css" />
+    <title>Creative Digital Solution</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link href="creative.css" rel="stylesheet" type="text/css"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-    <header>
-		<div id="logo">
-			<img src="images/Treehouse-Home.jpg">
-		</div>
+<header>
+    <div id="logo">
+        <img src="images/Treehouse-Home.jpg">
+    </div>
 
-	<div id="menu">
-		<ul>
+    <div id="menu">
+        <ul>
             <li><a href="default.asp">Home</a></li>
             <li><a href="default.asp">ABOUT</a></li>
             <li><a href="default.asp">BLOG</a></li>
             <li><a href="default.asp">PORTFOLIO</a></li>
             <li><a href="default.asp">CONTACT</a></li>
-		</ul>
-	</div>
-    </header>
-	<div id="mainimg">
-				<div id="postimg">
-					<img src="images/backimg.jpg" alt="" />
-				</div>
-         <div id="postword">
-               <h1><font color="white">CREATIVE DIGITAL</br></br> SOLUTIONS</font></h1>
-                <P>Proin iaculis purus consequat sem cure.</P>
-                <button>VIEW PORTFOLIO</button>
+        </ul>
+    </div>
+</header>
+<div id="mainimg">
+    <div id="postimg">
+        <img src="images/backimg.jpg" alt=""/>
+    </div>
+    <div id="postword">
+        <h1><font color="white">CREATIVE DIGITAL</br></br> SOLUTIONS</font></h1>
+        <P>Proin iaculis purus consequat sem cure.</P>
+        <button>VIEW PORTFOLIO</button>
+    </div>
+</div>
+<div id="content1">
+    <div id="con1">
+        <h2><b>PROFESSIONAL SERVICES</b></h2>
+        <p>
+            Proin iaculis purus consequat sem cure
+        </p>
+    </div>
+    <div id="side1">
+        <h3>BEAUTIFUL DESIGNS</h3>
+        <P>Proin iaculis purus consequat sem cure</br>
+            dignissim. Donec porttitora entum suscipit</br>
+            aenean rthoncus posuere odio in tincidunt.
+        </P>
+    </div>
+    <div id="side2">
+        <h3>RESPONSIVE WEB</h3>
+        <p>
+            Proin iaculis purus consequat sem cure</br>
+            dignissim. Donec porttitora entum suscipit</br>
+            aenean rthoncus posuere odio in tincidunt.
+        </p>
+    </div>
+    <div id="side3">
+        <h3>MARKETING TOOLS</h3>
+        <p>
+            Proin iaculis purus consequat sem cure</br>
+            dignissim. Donec porttitora entum suscipit</br>
+            aenean rthoncus posuere odio in tincidunt.
+        </p>
+    </div>
+</div>
+<div id="content2">
+    <div id="postimg2">
+        <img src="images/side.jpg" alt=""/>
+    </div>
+    <div id="postword2">
+        <h2><b><font color="white">JUST RELAX&</br></br>
+            LET US DO THE HEAVY LIFTING</font></b></h2>
+        <P>Proin iaculis purus consequat sem cure dignissim.Donec</br>
+            porttitora entum suscipit aenean rthoncus posuere odio in tincidunt.</P>
+    </div>
+    <div id="postword3">
+        Initial Setup & Customizations
+        <br>
+        Regular Updates
+        <br>
+        Round The Clock Support
+    </div>
+    <button id="learnmore">LEARN MORE</button>
+</div>
+<div id="content3">
+    <div id="latest">
+        <h2><b>LATEST PROJECT</b></h2>
+        <P>Proin iaculis purus consequat sem cure</P>
+    </div>
+    <div id="side4">
+        <h4>DEVELOPING A FRAMEWORK</h4>
+        <P>Proin iaculis purus consequat sem cure dignissim</br>Donec
+            porttitora entum suscipit aenean rthoncus posuere</br>                      odio in tincidunt.</P>
+    </div>
+    <div id="side5">
+        <h5>E-Commerce Ready</h5>
+        <p>Proin iaculis purus consequat sem cure dignissim</p>
+    </div>
+    <div id="side6">
+        <h5>Powerful SEO Features</h5>
+        <p>Proin iaculis purus consequat sem cure</p>
+    </div>
+    <div id="side7">
+        <h5>Secure Encryption</h5>
+        <p>Proin iaculis purus consequat sem cure iaculis purus</p>
+    </div>
+    <div id="side8">
+        <p>Proin iaculis purus consequat sem cure dignissim Donec</br>
+            porttitora entum suscipit aenean rthoncus posuere odio in</p>
+        <a href="#">VIEW DETAILS</a>
+    </div>
+    <div id="content4">
+        <div id="culture">
+            <h2>CULTURE & VALUES</h2>
+            <P>Proin iaculis purus consequat cure</P>
         </div>
-	</div>
-    <div id="content1">
-			<div id="con1">
-				<h2><b>PROFESSIONAL SERVICES</b></h2>
-				<p>
-					Proin iaculis purus consequat sem cure
-				</p>
-			</div>
-			<div id="side1">
-				<h3>BEAUTIFUL DESIGNS</h3>
-				<P>Proin iaculis purus consequat sem cure</br>
-                    dignissim. Donec porttitora entum suscipit</br>
-                    aenean rthoncus posuere odio in tincidunt.
-                </P>
-			</div>
-			<div id="side2">
-				<h3>RESPONSIVE WEB</h3>
-				<p>
-					Proin iaculis purus consequat sem cure</br>
-                    dignissim. Donec porttitora entum suscipit</br>
-                    aenean rthoncus posuere odio in tincidunt.
-				</p>
-			</div>
-           <div id="side3">
-				<h3>MARKETING TOOLS</h3>
-				<p>
-					Proin iaculis purus consequat sem cure</br>
-                    dignissim. Donec porttitora entum suscipit</br>
-                    aenean rthoncus posuere odio in tincidunt.
-				</p>
-			</div>
-		</div>
-        <div id="content2">
-            <div id="postimg2">
-                <img src="images/side.jpg" alt=""/>
-            </div>
-            <div id="postword2">
-                <h2><b><font color="white">JUST RELAX&</br></br>
-                LET US DO THE HEAVY LIFTING</font></b></h2>
-                <P>Proin iaculis purus consequat sem cure                                       dignissim.Donec</br>
-                    porttitora entum suscipit aenean rthoncus posuere odio                       in tincidunt.</P>
-            </div>
-            <div id="postword3">
-                 Initial Setup & Customizations
-                    <br>
-                 Regular Updates
-                    <br>
-                 Round The Clock Support
-            </div>
-            <button id="learnmore">LEARN MORE</button>
+        <div id="side9">
+            <h5>WORK-LIFE BALANCE</h5>
+            <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora
+                entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
         </div>
-    <div id="content3">
-        <div id="latest">
-            <h2><b>LATEST PROJECT</b></h2>
+        <div id="side10">
+            <h5>QUALITY OVER QUANTITY</h5>
+            <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora
+                entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
+        </div>
+        <div id="side11">
+            <h5>DELEVER EXCELLENCE</h5>
+            <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora
+                entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
+        </div>
+    </div>
+    <div id="content5">
+        <div id="awesome">
+            <h2>OUR AWESOME CLIENTS</h2>
             <P>Proin iaculis purus consequat sem cure</P>
         </div>
-        <div id="side4">
-            <h4>DEVELOPING A FRAMEWORK</h4>
-            <P>Proin iaculis purus consequat sem cure dignissim</br>Donec
-                    porttitora entum suscipit aenean rthoncus posuere</br>                      odio in tincidunt.</P>
+        <div id="jamie">
+            <h5>"Proin iaculis purus consequat sem cure dignissim.</br>                      Donec porttitora entum
+                suscipit aenean rthoncus"</h5>
+            <p><font color="#33ff99">-Jamie Richardson, Founder of Cocoa Media</font></p>
         </div>
-        <div id="side5">
-            <h5>E-Commerce Ready</h5>
-            <p>Proin iaculis purus consequat sem cure dignissim</p>
+        <div id="kim">
+            <h5>"Proin iaculis purus consequat sem cure dignissim.</br>                      Donec porttitora entum
+                suscipit aenean rthoncus"</h5>
+            <p><font color="#33ff99">-Kim Thompson Founder of Rainel</font></p>
         </div>
-        <div id="side6">
-            <h5>Powerful SEO Features</h5>
-            <p>Proin iaculis purus consequat sem cure</p>
-        </div>
-        <div id="side7">
-            <h5>Secure Encryption</h5>
-            <p>Proin iaculis purus consequat sem cure iaculis purus</p>
-        </div>
-        <div id="side8">
-            <p>Proin iaculis purus consequat sem cure dignissim Donec</br>
-                porttitora entum suscipit aenean rthoncus posuere odio in</p>
-            <a href="#">VIEW DETAILS</a>
-        </div>
-        <div id="content4">
-            <div id="culture">
-                <h2>CULTURE & VALUES</h2>
-                <P>Proin iaculis purus consequat cure</P>
-            </div>
-            <div id="side9">
-                <h5>WORK-LIFE BALANCE</h5>
-                <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
-            </div>
-            <div id="side10">
-                <h5>QUALITY OVER QUANTITY</h5>
-                <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
-            </div>
-            <div id="side11">
-                <h5>DELEVER EXCELLENCE</h5>
-                <P>Proin iaculis purus consequat sem cure</br>                                  dignissim.Donec porttitora entum suscipit</br>                              aenean rthoncus posuere odio in tincidunt.</P>
-            </div>
-        </div>
-        <div id="content5">
-            <div id="awesome">
-                <h2>OUR AWESOME CLIENTS</h2>
-                <P>Proin iaculis purus consequat sem cure</P>
-            </div>
-            <div id="jamie">
-                <h5>"Proin iaculis purus consequat sem cure dignissim.</br>                      Donec porttitora entum suscipit aenean rthoncus"</h5>
-                <p><font color="#33ff99">-Jamie Richardson, Founder of Cocoa Media</font></p>
-            </div>
-            <div id="kim">
-                <h5>"Proin iaculis purus consequat sem cure dignissim.</br>                      Donec porttitora entum suscipit aenean rthoncus"</h5>
-                <p><font color="#33ff99">-Kim Thompson Founder of Rainel</font></p>
-            </div>
-        </div>
-        <div id="content6">
-            <h2>READY TO TALK ABOUT YOUR NEXT PROJECT?</h2>
-            <button>CONTACT US</button>
-        </div>
-        <div id="logos">
+    </div>
+    <div id="content6">
+        <h2>READY TO TALK ABOUT YOUR NEXT PROJECT?</h2>
+        <button>CONTACT US</button>
+    </div>
+    <div id="logos">
 
+    </div>
+    <div id="content7">
+        <div id="side12">
+            <h5 style="color:white;">CONTACT US</h5>
+            <P>55 Main st.</br>
+                Toronto.ON</br>
+                M1H 3A5</P>
+            <p>(416)555-5252</p>
+            <p>hello@treehouse.com</p>
         </div>
-        <div id="content7">
-            <div id="side12">
-                <h5 style="color:white;">CONTACT US</h5>
-                <P>55 Main st.</br>
-                    Toronto.ON</br>
-                    M1H 3A5</P>
-                <p>(416)555-5252</p>
-                <p>hello@treehouse.com</p>
-            </div>
-            <div id="side13">
-                <h5 style="color:white;">LATEST POSTS</h5>
-                <P>Made With Love In Toronto</P>
-                <p>Startup News & Emerging Tech</p>
-                <p>Bitcoin Will Soon Rule The World</p>
-                <p>Wearable Technology On The Rise</p>
-                <p>Learn Web Design In 30 Days!</p>
-            </div>
-            <div id="side14">
-              <h5 style="color:white;">LATEST TWEETS</h5>
-                <p>Confucius:Life is really simple,</br>
-                    but we insist on making it</br>
-                    complicated.</br>
-                    <b>#famousquotes</b></br>
-                    <h6 style="color:grey">8 min ago</h6>
-                </p>
-                <p>Grab the Free Treehouse web</br>
-                    template at FreebiesXpress!</br>
-                    <b>#freebies #templates</b></br>
-                    <h6 style="color:grey">2 days ago</h6>
-                </p>
-            </div>
+        <div id="side13">
+            <h5 style="color:white;">LATEST POSTS</h5>
+            <P>Made With Love In Toronto</P>
+            <p>Startup News & Emerging Tech</p>
+            <p>Bitcoin Will Soon Rule The World</p>
+            <p>Wearable Technology On The Rise</p>
+            <p>Learn Web Design In 30 Days!</p>
         </div>
+        <div id="side14">
+            <h5 style="color:white;">LATEST TWEETS</h5>
+            <p>Confucius:Life is really simple,</br>
+                but we insist on making it</br>
+                complicated.</br>
+                <b>#famousquotes</b></br>
+            <h6 style="color:grey">8 min ago</h6>
+            </p>
+            <p>Grab the Free Treehouse web</br>
+                template at FreebiesXpress!</br>
+                <b>#freebies #templates</b></br>
+            <h6 style="color:grey">2 days ago</h6>
+            </p>
+        </div>
+    </div>
     <div id="footer">
-	   &copy;Copyright 2014 FreebiesXpress.com
+        &copy;Copyright 2014 FreebiesXpress.com
     </div>
 </body>
 </html>
